[metadata]
name = html-for-docx
version = 1.0.5
url = https://github.com/dfop02/html4docx
project_urls =
    Changelog = https://github.com/dfop02/html4docx/blob/master/HISTORY.rst
    Bug Tracker = https://github.com/dfop02/html4docx/issues
    Repository = https://github.com/dfop02/html4docx
author = Diogo Fernandes
author_email = dfop02@hotmail.com
maintainer = Diogo Fernandes
maintainer_email = dfop02@hotmail.com
description = Convert valid HTML input for a valid docx.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    python-docx >= 1.1.0
    beautifulsoup4 >= 4.12.2

[flake8]
exclude = build,.git,html4docx/__init__.py,setup.py
ignore = W504,W601,W292,E261,E302,E305
max-line-length = 127
