[metadata]
name = html-for-docx
version = 1.1.1
url = https://github.com/dfop02/html4docx
project_urls =
    Changelog = https://github.com/dfop02/html4docx/blob/master/HISTORY.rst
    Bug Tracker = https://github.com/dfop02/html4docx/issues
    Repository = https://github.com/dfop02/html4docx
author = Diogo Fernandes
author_email = diogofernandesop@gmail.com
maintainer = Diogo Fernandes
maintainer_email = diogofernandesop@gmail.com
description = Convert valid HTML input for a valid docx.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Build Tools
    Topic :: Text Processing
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    python-docx >= 1.1.0
    beautifulsoup4 >= 4.12.2

